# LR7

./: CMakeLists.txt  headLr7.h  input.cpp  prog  task1.cpp  task2  task2.cpp  task3.cpp  task4.cpp  task5  task5.cpp  task5n
